roles/homeserver/files/etc/iptables/rules.v4

*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp -j ACCEPT --icmp-type any
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -s 192.168.10.0/24 -p tcp -m tcp -j ACCEPT
-A INPUT -s 10.4.1.0/24 -p tcp -m tcp -j ACCEPT
-A INPUT -s 212.5.162.10 -p tcp -m tcp -m state --state NEW --dport 60222 -j ACCEPT
-A INPUT -s 127.0.0.1 -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -s 192.168.10.0/24 -p udp -m udp --dport 6000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited

COMMIT
